--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Error tracking package for Laravel applications",
     "version": "1.0.0",
     "type": "library",
+    "license": "MIT",
     "require": {
         "php": ">=7.4",
         "illuminate/support": "^8.0|^9.0|^10.0"
